[tool.poetry]
name = "social-media-computing"
version = "0.1.0"
description = ""
authors = ["Golovin Pavel <gopavel0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
sklearn = "^0.0"
scipy = "^1.5.3"
matplotlib = "^3.3.2"
tqdm = "^4.50.2"
ipython = "^7.18.1"
attrs = "^20.2.0"
jupyter = "^1.0.0"
pandas = "^1.1.3"
nltk = "^3.5"
langdetect = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
